--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
-    "ms": "^2.1.1"
+    "ms": "^2.1.1",
+    "superagent": "^4.0.0-beta.5"
   }
 }
