--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "ms": "^2.1.1",
-    "superagent": "^4.0.0-beta.5"
+    "opusscript": "0.0.6",
+    "superagent": "^4.0.0-beta.5",
+    "ytdl-core": "^0.26.1"
   }
 }
