--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "ffmpeg": "0.0.4",
     "ms": "^2.1.1",
+    "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
     "superagent": "^4.0.0-beta.5",
     "ytdl-core": "^0.26.1"
