--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
+    "prism-media": "0.0.3",
     "superagent": "^4.0.0-beta.5",
     "ytdl-core": "^0.26.1"
   }
