--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "eslint": "^5.7.0",
     "ffmpeg": "0.0.4",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
