--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^11.4.2",
     "eslint": "^5.7.0",
     "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^4.0.0",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
