--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "eslint": "^5.7.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
+    "moment": "^2.22.2",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
     "prism-media": "0.0.3",
+    "sqlite": "^3.0.0",
     "superagent": "^4.0.0-beta.5",
     "ytdl-core": "^0.26.1"
   }
