--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
     "prism-media": "0.0.3",
+    "sql-template-strings": "^2.2.2",
     "sqlite": "^3.0.0",
+    "sqlite3": "^4.0.2",
     "superagent": "^4.0.0-beta.5",
     "ytdl-core": "^0.26.1"
   }
