--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "discord.js-musicbot-addon": "^12.0.6",
     "eslint": "^5.7.0",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
