--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
     "prism-media": "0.0.3",
+    "simple-youtube-api": "^5.0.2",
     "sql-template-strings": "^2.2.2",
     "sqlite": "^3.0.0",
     "sqlite3": "^4.0.2",
