--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Syed Omar Noor",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^10.12.1",
     "all": "0.0.0",
     "commando": "0.0.2",
     "discord.js": "^11.4.2",
