--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "all": "0.0.0",
     "commando": "0.0.2",
     "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
     "discord.js-lavalink-musicbot": "0.0.6",
     "discord.js-musicbot-addon": "^13.0.1",
     "eslint": "^5.7.0",
