--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^10.12.1",
     "all": "0.0.0",
     "commando": "0.0.2",
+    "discord-helpers": "^1.0.0",
     "discord.js": "^11.4.2",
     "discord.js-commando": "^0.10.0",
     "discord.js-lavalink-musicbot": "0.0.6",
