--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "superagent": "^4.0.0-beta.5",
     "yarn": "^1.10.1",
     "yayify": "^1.0.0",
+    "ytdl": "^0.10.4",
     "ytdl-core": "^0.26.1"
   }
 }
