--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js-lavalink-musicbot": "0.0.6",
     "discord.js-musicbot-addon": "^13.0.1",
     "eslint": "^5.7.0",
+    "event-stream": "^4.0.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
     "jslint": "^0.12.0",
