--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-binaries": "^4.0.0",
     "jslint": "^0.12.0",
+    "mathjs": "^5.4.0",
     "moment": "^2.22.2",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
