--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jslint": "^0.12.0",
     "mathjs": "^5.4.0",
     "moment": "^2.22.2",
+    "mongoose": "^5.4.4",
     "ms": "^2.1.1",
     "nodemon": "^1.18.4",
     "opusscript": "0.0.6",
